Fix background image spacing

--- a/_sass/_backgrounds.scss
+++ b/_sass/_backgrounds.scss
@@ -75,6 +75,7 @@
 #bilan-financier {
   background-color: $light-grey;
   color: #000;
+  margin-top: -100px;
 }
 
 #partenaires {
@@ -90,6 +91,7 @@
     height: 600px;
     content: " ";
     display: block;
+    margin-top: -300px;
   }
 
 }
